--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                             <li>Если возникнут проблемы, звоните по номеру: <a href="tel: 88005002330"
                                     class="link">8(800) 500 23-30</a></li>
                         </ol>
-                        <a href="javascript: void(0)" target="_blank" class="big-link link">Скачайте договор здесь</a>
+                        <div class="link-wrapper"><a href="javascript: void(0)" target="_blank"
+                                class="big-link link">Скачайте договор здесь</a></div>
                     </div>
                 </div>
             </div>
@@ -206,7 +207,6 @@
             <div class="question-form_wrapper flex-block">
                 <div class="question-form_wrapper--left">
                     <div class="img" style="background-image: url(./media/img/form-img.jpg);"></div>
-                    <!-- <img class="img" src="./media/img/form-img.jpg" alt=""> -->
                 </div>
                 <div class="question-form_wrapper--right">
                     <form class="question-form" action="" method="POST" id="question-form">
