--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     <!--AOS JS-->
     <script src="./js/plugins/aos-master/aos.js"></script>
     <!--Main JS-->
-    <script src="./js/main.js"></script>
+    <script src="./js/main.min.js"></script>
 </body>
 
 </html>
